--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.android.sapo.app.MainActivity"
+            android:name=".TiendasActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,12 +23,21 @@
         </activity>
         <activity
             android:id="@+id/title_activity_detail"
-            android:name="com.example.android.sapo.app.DetailActivity"
+            android:name=".CategoriasActivity"
             android:label="@string/title_activity_detail"
-            android:parentActivityName="com.example.android.sapo.app.MainActivity" >
+            android:parentActivityName=".TiendasActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.sapo.app.MainActivity" />
+                android:value=".TiendasActivity" />
+        </activity>
+        <activity
+            android:id="@+id/title_activity_productos"
+            android:name=".ProductosActivity"
+            android:label="@string/title_activity_productos"
+            android:parentActivityName=".CategoriasActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CategoriasActivity" />
         </activity>
     </application>
 
