Nueva vista para detalles del producto elegido. Cambia la vista de la lista de productos.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.sapo.app"
-    android:installLocation="preferExternal">
+    android:installLocation="preferExternal" >
 
     <!-- This permission is necessary in order for Sunshine to perform network access. -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,6 +37,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".CategoriasActivity" />
+        </activity>
+        <activity
+            android:name=".DetalleProductoActivity"
+            android:label="@string/title_activity_detalle_producto"
+            android:parentActivityName=".ProductosActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.sapo.app.ProductosActivity" />
         </activity>
     </application>
 
