Empezando agregar producto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,19 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
-            <activity
-                android:id="@+id/title_activity_detail"
-                android:name=".AlmacenActivity"
-                android:label="@string/app_name">
+        <activity
+            android:id="@+id/title_activity_detail"
+            android:name=".AlmacenActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:id="@+id/title_activity_detail"
@@ -49,17 +51,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.android.sapo.app.ProductosActivity" />
         </activity>
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <provider
             android:name=".data.SAPoProvider"
             android:authorities="com.example.android.sapo.app" />
 
-
+        <activity android:name=".AgregarProductoActivity"
+            android:parentActivityName=".ProductosActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.sapo.app.ProductosActivity" />
+        </activity>
     </application>
 
 </manifest>
